move background image on css to html because I believe it has some meaning to the web page not just design. Little more Semantics renamed and correction

--- a/index.html
+++ b/index.html
@@ -11,37 +11,26 @@
   <body>
     <!-- rename elements using HTML Semantics -->
     <header class="header">
-      <h1>Hori<span class="seo">seo</span>n</h1>
+      <!-- change class="seo" to id="seo" -->
+      <h1>Hori<span id="seo">seo</span>n</h1>
       <!-- div to nav -->
       <nav>
         <ul>
-          <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-          </li>
-          <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
-          </li>
-          <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-          </li>
+          <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+          <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+          <li><a href="#social-media-marketing">Social Media Marketing</a></li>
         </ul>
       </nav>
     </header>
     <!-- change div to img -->
-    <!-- remove img ending-->
-    <img class="hero" />
-
+    <!-- remove img ending and move the img link from css and add alt tag to it-->
+          <img src="assets/images/digital-marketing-meeting.jpg" alt="people meeting in office" class="hero" >
+   
     <!-- div to section -->
     <div class="content">
       <!-- div to section -->
       <section class="search-engine-optimization">
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          alt="image of SEO idea on a notebook"
-          class="float-left"
-        />
+        <img src="./assets/images/search-engine-optimization.jpg" alt="image of SEO idea on a notebook" class="float-left"/>
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
